--- a/мп/сайты/Мир/profile.html
+++ b/мп/сайты/Мир/profile.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
+    <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-database.js"></script>
 
     <style>
         body,
@@ -354,7 +356,7 @@
     <!-- --------------------------+
     |   Верхняя и боковая панели   |
     +--------------------------- -->
-    
+
     <!-- --------------------+
     |         Профиль        |
     +--------------------- -->
@@ -556,6 +558,45 @@
     <!-- --------------------+
     |         Профиль        |
     +--------------------- -->
+
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.9.0/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+            apiKey: "AIzaSyBKe0QqATTkz1yBGY58MxAuIAr0gLv_xUg",
+            authDomain: "fitnes-81586.firebaseapp.com",
+            databaseURL: "https://fitnes-81586-default-rtdb.firebaseio.com",
+            projectId: "fitnes-81586",
+            storageBucket: "fitnes-81586.appspot.com",
+            messagingSenderId: "608681427836",
+            appId: "1:608681427836:web:0dfab30fb6ca191b761af9",
+            measurementId: "G-TEHRRM3NY8"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+        const database = firebase.database();
+
+        const dbRef = ref(database, "fitnes");
+        onValue(dbRef, (snapshot) => {
+            const data = snapshot.val();
+            const test1 = data.test1;
+            const test2 = data.test2;
+
+            // Process your data here
+            console.log("test1:", test1);
+            console.log("test2:", test2);
+        }, {
+            onlyOnce: true,
+        });
+    </script>
 
 </body>
 
