--- a/мп/сайты/Мир/trenirovki.html
+++ b/мп/сайты/Мир/trenirovki.html
@@ -360,146 +360,13 @@
     |   Верхняя и боковая панели   |
     +--------------------------- -->
 
-    <!-- ---------+
-    |   Главная   |
-    +---------- -->
-    <div главная>
+    <!-- ------------+
+    |   тренировки   |
+    +------------- -->
 
-        <style>
-            .container {
-                position: relative;
-            }
-
-            .container img {
-                width: 100%;
-            }
-
-            .centered-text {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                font-size: 48px;
-                font-weight: bold;
-                color: white;
-            }
-
-            .centered-text span {
-                color: red;
-                font-size: 56px;
-                font-weight: bold;
-            }
-
-            .title {
-                font-size: 38px;
-                font-weight: bold;
-                color: white;
-                text-align: center;
-            }
-
-            .title2 {
-                font-size: 20px;
-                color: white;
-                text-align: center;
-            }
-
-            .container {
-                display: flex;
-                flex-direction: column;
-            }
-
-            .row {
-                display: flex;
-                justify-content: space-between;
-            }
-
-            .item {
-                flex: 1;
-                margin: 10px;
-            }
-
-            .button {
-                background-color: #228B22;
-                border: none;
-                color: white;
-                padding: 15px 32px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 16px;
-                margin: 4px 2px;
-                cursor: pointer;
-                border-radius: 12px;
-                transition: background-color 0.3s;
-            }
-
-            .button-container {
-                display: flex;
-                justify-content: center;
-                margin-top: 20px;
-            }
-
-            .button:hover {
-                background-color: #4CAF50;
-            }
-
-            @media (max-width: 600px) {
-                .title {
-                    font-size: 24px;
-                }
-
-                .title2 {
-                    font-size: 24px;
-                }
-            }
-        </style>
-
-        <div class="container">
-            <img src="shit/samm.jpg" alt="">
-            <div class="centered-text">ФИТНЕС+<br><span>БАССЕЙН</span><br>от 2160 руб/мес*</div>
-        </div>
-
-        <br>
-        <div class="title">
-            FITRON — МНОГОФУНКЦИОНАЛЬНЫЕ ФИТНЕС-КЛУБЫ В РОСТОВЕ-НА-ДОНУ<br>
-        </div>
-
-        <br>
-        <div class="title2">
-            Комфортное пространство для здоровой и активной жизни
-        </div>
-        <br>
-
-        <div class="container">
-            <div class="row">
-                <div class="item">
-                    <div class="title">10</div>
-                    <div class="title2">КЛУБОВ ПО ГОРОДУ</div>
-                </div>
-                <div class="item">
-                    <div class="title">5</div>
-                    <div class="title2">БОЛЬШИХ БАССЕЙНОВ</div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="item">
-                    <div class="title">2</div>
-                    <div class="title2">ДЕТСКИХ КЛУБА</div>
-                </div>
-                <div class="item">
-                    <div class="title">1</div>
-                    <div class="title2">КЛУБНАЯ КАРТА</div>
-                </div>
-            </div>
-        </div>
-
-        <!-- <div class="button-container">
-            <button class="button">Купить абонемент</button>
-          </div> -->
-    </div>
-    <!-- ---------+
-    |   Главная   |
-    +---------- -->
+    <!-- ------------+
+    |   тренировки   |
+    +------------- -->
 
     <script скрипты>
 
