--- a/мп/сайты/Мир/treners.html
+++ b/мп/сайты/Мир/treners.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Профиль</title>
-    <link rel="icon" href="shit/icon2.png" sizes="190x190">
+    <link rel="icon" href="shit/gym-equipment.png" sizes="190x190">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -286,7 +286,7 @@
             <button onclick="window.location.href = 'index.html'"><img src="shit/house2.png">Главная</button>
             <button onclick="window.location.href = 'profile.html'"><img src="shit/user2.png">Личный кабинет</button>
             <button onclick="window.location.href = 'treners.html'"><img src="shit/group.png">Тренеры</button>
-            <button onclick="window.location.href = 'index.html'"><img src="shit/dumbbell.png">Тренировки</button>
+            <button onclick="window.location.href = 'trenirovki.html'"><img src="shit/dumbbell.png">Тренировки</button>
             <img src="shit/полоса4.png" alt="" width="100%">
 
             <!-- <button onclick="window.location.href = 'chat.html'"><img src="shit/chat2.png">Сообщения</button>
@@ -401,21 +401,21 @@
         <div class="trainer-container">
             
             <div class="trainer-row">
-                <img class="trainer-image" src="shit/sam — копия.jpg" alt="Тренер 1">
+                <img class="trainer-image" src="shit/sam.jpg" alt="Тренер 1">
                 <div class="trainer-name">
                     Sam Sulek
                 </div>
-                <img class="trainer-image" src="shit/sam — копия.jpg" alt="Тренер 2">
+                <img class="trainer-image" src="shit/samm.jpg" alt="Тренер 2">
                 <div class="trainer-name">
                     Sul Malek
                 </div>
             </div>
             <div class="trainer-row">
-                <img class="trainer-image" src="shit/sam — копия.jpg" alt="Тренер 3">
+                <img class="trainer-image" src="shit/samm.jpg" alt="Тренер 3">
                 <div class="trainer-name">
                     Mal Suslek
                 </div>
-                <img class="trainer-image" src="shit/sam — копия.jpg" alt="Тренер 4">
+                <img class="trainer-image" src="shit/samm.jpg" alt="Тренер 4">
                 <div class="trainer-name">
                     Abdul sam Ti Suslik
                 </div>
