--- a/мп/сайты/Мир/treners.html
+++ b/мп/сайты/Мир/treners.html
@@ -401,23 +401,23 @@
         <div class="trainer-container">
             
             <div class="trainer-row">
-                <img class="trainer-image" src="shit/sam.jpg" alt="Тренер 1">
+                <img class="trainer-image" src="shit/samsul.jpg" alt="Тренер 1">
                 <div class="trainer-name">
                     Sam Sulek
                 </div>
-                <img class="trainer-image" src="shit/samm.jpg" alt="Тренер 2">
+                <img class="trainer-image" src="shit/kevin.jpg" alt="Тренер 2">
                 <div class="trainer-name">
-                    Sul Malek
+                    Kevin Levrone
                 </div>
             </div>
             <div class="trainer-row">
-                <img class="trainer-image" src="shit/samm.jpg" alt="Тренер 3">
+                <img class="trainer-image" src="shit/arnold2.jpg" alt="Тренер 3">
                 <div class="trainer-name">
-                    Mal Suslek
+                    Arnold Schwarzenegger
                 </div>
-                <img class="trainer-image" src="shit/samm.jpg" alt="Тренер 4">
+                <img class="trainer-image" src="shit/tomPlatz.jpg" alt="Тренер 4">
                 <div class="trainer-name">
-                    Abdul sam Ti Suslik
+                    Tom Platz
                 </div>
             </div>
 
