--- a/мп/сайты/Никита/index.html
+++ b/мп/сайты/Никита/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NikitaTrain</title>
+    <title>Fitness4All</title>
     <link rel="icon" href="shit/iconGym.png" sizes="190x190">
     
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -281,7 +281,7 @@
 
         <div class="top-panel">
             <div class="burger-menu-button" onclick="toggleSidebar()">☰</div>
-            <div class="logo">NikitaTrain</div>
+            <div class="logo">Fitness4All</div>
             <!-- <div class="search-container">
             <button onclick="toggleSearch()">🔍</button>
             <input id="search-input" type="text" placeholder="Поиск...">
@@ -427,7 +427,7 @@
         <br><br><br><br>
 
         <div class="container">
-            <div class="title">Фитнес клуб NikitaTrain Ростов-на-Дону - Открыт!</div>
+            <div class="title">Фитнес клуб Fitness4All Ростов-на-Дону - Открыт!</div>
             <img src="shit/kachalka.jpg" alt="" style="width: 100%;">
         </div>
 
@@ -525,7 +525,7 @@
             showSlide(0);
         </script>
         <!-- переклацивающиеся картинки -->
-
+        <br><br>
     </div>
     <!-- ---------+
     |   Главная   |
