--- a/мп/сайты/Никита/treners.html
+++ b/мп/сайты/Никита/treners.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NikitaTrain</title>
+    <title>Fitness4All</title>
     <link rel="icon" href="shit/iconGym.png" sizes="190x190">
 
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -277,7 +277,7 @@
 
         <div class="top-panel">
             <div class="burger-menu-button" onclick="toggleSidebar()">☰</div>
-            <div class="logo">NikitaTrain</div>
+            <div class="logo">Fitness4All</div>
             <!-- <div class="search-container">
             <button onclick="toggleSearch()">🔍</button>
             <input id="search-input" type="text" placeholder="Поиск...">
@@ -403,23 +403,23 @@
         <div class="trainer-container">
 
             <div class="trainer-row">
-                <img class="trainer-image" src="shit/sam.jpg" alt="Тренер 1">
+                <img class="trainer-image" src="shit/samsul2.jpg" alt="Тренер 1">
                 <div class="trainer-name">
                     Sam Sulek
                 </div>
-                <img class="trainer-image" src="shit/samm.jpg" alt="Тренер 2">
+                <img class="trainer-image" src="shit/cbum.jpg" alt="Тренер 2">
                 <div class="trainer-name">
-                    Sul Malek
+                    Chris Bumstead
                 </div>
             </div>
             <div class="trainer-row">
-                <img class="trainer-image" src="shit/samm.jpg" alt="Тренер 3">
+                <img class="trainer-image" src="shit/ronnie.jpg" alt="Тренер 3">
                 <div class="trainer-name">
-                    Mal Suslek
+                    Ronnie Coleman
                 </div>
-                <img class="trainer-image" src="shit/samm.jpg" alt="Тренер 4">
+                <img class="trainer-image" src="shit/arni.jpeg" alt="Тренер 4">
                 <div class="trainer-name">
-                    Abdul sam Ti Suslik
+                    Arnold Schwarzenegger
                 </div>
             </div>
 
