--- a/мп/сайты/Никита/profile.html
+++ b/мп/сайты/Никита/profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NikitaTrain</title>
+    <title>Fitness4All</title>
     <link rel="icon" href="shit/iconGym.png" sizes="190x190">
 
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -279,7 +279,7 @@
 
         <div class="top-panel">
             <div class="burger-menu-button" onclick="toggleSidebar()">☰</div>
-            <div class="logo">NikitaTrain</div>
+            <div class="logo">Fitness4All</div>
             <!-- <div class="search-container">
             <button onclick="toggleSearch()">🔍</button>
             <input id="search-input" type="text" placeholder="Поиск...">
