--- a/мп/сайты/Мир/index.html
+++ b/мп/сайты/Мир/index.html
@@ -455,7 +455,8 @@
         </style>
 
         <div class="container">
-            <img src="shit/samm.jpg" alt="">
+            <!-- <img src="shit/samm.jpg" alt=""> -->
+            <img src="shit/чайная_девушка2.jpg" alt="">
             <div class="centered-text">ФИТНЕС+<br><span>БАССЕЙН</span><br>от 2160 руб/мес*</div>
         </div>
 
